# ros_ci_test

./: README.md
.github/workflows/: build-and-test.yml  test.yml
cpp_test/: CMakeLists.txt  package.xml
cpp_test/include/cpp_test/: text_publisher_component.hpp
cpp_test/src/: main.cpp  text_publisher_component.cpp  text_publisher_node.cpp
cpp_test/test/: test_dynamic_parameters.cpp
